email_errors.log
Internal Server Error: /api/users/ai-suggestions/
"POST /api/users/ai-suggestions/ HTTP/1.1" 500 70
Internal Server Error: /api/users/ai-suggestions/
"POST /api/users/ai-suggestions/ HTTP/1.1" 500 194
Internal Server Error: /api/users/ai-suggestions/
"POST /api/users/ai-suggestions/ HTTP/1.1" 500 196
Internal Server Error: /
Traceback (most recent call last):
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
               ^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\loader.py", line 47, in select_template
    raise TemplateDoesNotExist(", ".join(template_name_list), chain=chain)
django.template.exceptions.TemplateDoesNotExist: welcome/index.html
"GET / HTTP/1.1" 500 82955
Internal Server Error: /
Traceback (most recent call last):
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\base.py", line 510, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'static'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
               ^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\base.py", line 512, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\template\base.py", line 573, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 7: 'static'. Did you forget to register or load this tag?
"GET / HTTP/1.1" 500 136556
Internal Server Error: /home/
Traceback (most recent call last):
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\views\generic\base.py", line 104, in view
    return self.dispatch(request, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\env\Lib\site-packages\django\views\generic\base.py", line 143, in dispatch
    return handler(request, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\DArk Lord\Desktop\ShubhamSingh-Assignment\email_outreach\users\views.py", line 40, in get
    return JsonResponse({"error": "Unauthorized"}, status=401)
           ^^^^^^^^^^^^
NameError: name 'JsonResponse' is not defined
"GET /home/ HTTP/1.1" 500 80165
